--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,4 +24,11 @@
     border-radius: 10px;
     text-align: center;
   }
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
   
