--- a/src/app/pages/administracion-votos/administracion-votos.component.html
+++ b/src/app/pages/administracion-votos/administracion-votos.component.html
@@ -1,10 +1,12 @@
-<div class="d-flex flex-column align-items-center justify-content-center min-vh-100">
-  <button type="button" class="btn btn-primary btn-lg mb-3 w-25" data-toggle="modal" data-target="#resultadosModal">
-    Ver Resultados de Votación
-  </button>
-  <button class="btn btn-danger btn-lg w-25" (click)="eliminarTodosLosVotos()">
-    Eliminar Votos
-  </button>
+<div class="container d-flex flex-column align-items-center justify-content-start vh-100">
+  <div class="mt-5 button-container">
+    <button type="button" class="btn custom-btn btn-primary btn-lg mb-3" data-toggle="modal" data-target="#resultadosModal">
+      Ver Resultados de Votación
+    </button>
+    <button class="btn custom-btn btn-danger btn-lg" (click)="eliminarTodosLosVotos()">
+      Eliminar Votos
+    </button>
+  </div>
 </div>
 
 
