--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,11 @@
 body {
-    background-image: url('https://torodelacruz.com/wp-content/uploads/2021/01/Colegioboston2.jpg');
-    background-size: 100% auto;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  
+  background-image: url('/assets/imagenes/fondo.jpg');
+  background-size: cover; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  min-height: 100vh; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
